<resources>
    <string name="app_name">DictionaryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_page">Welcome to Ensa Dictionnary</string>
    <string name="home_page_input_hint">Search</string>
    <string name="setting">Settings</string>
    <string name="itemWord">Conduire</string>
    <string name="todo">TODO</string>
    <string name="wordType">Noun</string>
    <string name="favorites">Favorites</string>
    <string name="searsh">Start Searching</string>
    <string name="searchButton">Search</string>
    <string name="clean_histo">Clean History</string>
    <string name="about">About</string>
    <string name="clean_favor">Clean Favorite</string>
    <string name="choix_de_la">Choix de langue</string>
    <string name="CleanFavoriteSettings">Clean Favorite</string>
    <string name="AboutSetting">About</string>
    <string name="about_page">About</string>
    <string name="textviewAbout">Welcome To DictionaryApp
DictionaryApp is a Professional Dictionary App. Here we will provide you only interesting content, which you will like very much. We\'re dedicated to providing you the best of Definition, with a focus on dependability and Dictionary.We hope you enjoy our App as much as we enjoy offering them to you. Please give your support and love. Thanks For Visiting Our Site Created By Ensa Students marouane zibout - achraf hiddan - youssef bahomman Have a nice day!</string>
</resources>