<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="@drawable/backround_degree">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:backgroundTint="@color/orange">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/settingsButton2"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:background="@drawable/rounded_style"
            android:text="@string/AboutSetting"
            android:textColor="#DD2C00"
            app:layout_constraintBottom_toTopOf="@+id/settingButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/settingButton3"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:background="@drawable/setting_bottom"
            android:text="@string/CleanFavoriteSettings"
            android:textColor="#DD2C00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.443" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>